Fixed linkedin alignemnt

--- a/main.css
+++ b/main.css
@@ -635,6 +635,7 @@ footer {
   padding-top: 40px;
   background: #323B42;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #fff;
@@ -649,12 +650,12 @@ footer {
     justify-content: space-between;
     align-items: center;
     position: relative;
-    opacity: 0; }
+    opacity: 0;
+    margin: 0 auto; }
     footer .container .social-link {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      margin: 0 20px; }
+      align-items: center; }
       footer .container .social-link i {
         font-size: 4rem;
         max-height: 80px; }
